# BIA-ro-crate

./: README.md  Readme.md  pyproject.toml
.github/workflows/: test.yaml
bia_ro_crate/: cli.py  licences.py
bia_ro_crate/bia_to_zarr_crate/: bia_client.py  conversion.py
bia_ro_crate/bia_to_zarr_crate/zarr_crate/: rembi_extension.py  zarr_extension.py
bia_ro_crate/model/: model.ttl
bia_ro_crate/model/example/S-BIAD1494/base/: ro-crate-metadata.json
bia_ro_crate/model/example/S-BIAD1494/base2/: ro-crate-metadata.json
bia_ro_crate/model/example/S-BIAD1494/ro-crate-version/: ro-crate-metadata.json
bia_ro_crate/model/example/S-BIAD843/ro-crate-version/: ro-crate-metadata.json
bia_ro_crate/ro_crate_to_bia/: context_generation.py  crate_reader.py  ingest_models.py  validate_crate.py
bia_ro_crate/ro_crate_to_bia/entity_conversion/: AnnotationMethod.py  Attribute.py  BioSample.py  Dataset.py  FileReference.py  ImageAcquisitionProtocol.py  Protocol.py  SpecimenImagingPreparationProtocol.py  Study.py
bia_ro_crate/ro_crate_to_bia/ld_context/: ContextTerm.py  SimpleJSONLDContext.py
bia_ro_crate/ro_crate_to_bia/pydantic_ld/: FieldContext.py  LDModel.py  ROCrateModel.py
test/: test_licence_transforms.py  test_ontology.py  test_ro_crate_context_and_models.py  test_ro_crate_to_bia.py
test/ro_crate_to_bia/: output.json
