[tool.poetry]
name = "bia-ro-crate"
version = "0.0.1"
description = ""
authors = []
readme = "Readme.md"

[tool.poetry.scripts]
bia-ro-crate = "bia_ro_crate.cli:bia_ro_crate"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
pydantic = "^2.4.0"
bia-shared-datamodels = { git = "https://github.com/BioImage-Archive/bia-integrator.git", subdirectory = "bia-shared-datamodels" }
bia-integrator-api = { git = "https://github.com/BioImage-Archive/bia-integrator.git", subdirectory = "clients/python", branch = "main" }
ome2024-ngff-challenge = { git = "https://github.com/ome/ome2024-ngff-challenge.git", branch = "main" }
typer = "^0.12.5"
rocrate = "^0.10.0"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
